example/SmallStep-mutual/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-m
  namespace: my-app
  labels:
    app: httpbin-m
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin-m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-m
  namespace: my-app  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-m
      version: v1
  template:
    metadata:
      labels:
        app: httpbin-m
        version: v1
    spec:
      serviceAccountName: httpbin-m
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin-m
        ports:
        - containerPort: 80
