example/SmallStep-mutual/httpbin-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: httpbin-m-mygateway
 namespace: my-app
spec:
 selector:
   istio: ingressgateway # use istio default ingress gateway
 servers:
 - port:
     number: 443
     name: https
     protocol: HTTPS
   tls:
     mode: MUTUAL
     credentialName: httpbin-m-secret # must be the same as secret
     privateKey: sds
     serverCertificate: sds
   hosts:
   - httpbin-m.example.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-m
  namespace: my-app
spec:
  hosts:
  - "httpbin-m.example.com"
  gateways:
  - httpbin-m-mygateway
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: httpbin-m
